--- a/source/index.html
+++ b/source/index.html
@@ -65,6 +65,54 @@
         </div>
       </div>
     </header>
+    <main class="page-main">
+      <div class="wrapper">CONTENT</div>
+    </main>
+    <footer class="page-footer">
+      <div class="wrapper">
+        <nav class="footer-nav">
+          <div class="footer-logo">
+            <a>
+              <svg>
+                <use xlink:href="img/sprite_auto.svg#logo"></use>
+              </svg>
+            </a>
+          </div>
+          <div class="footer-menu">
+            <ul>
+              <li><a href="#">Преимущества </a></li>
+              <li><a href="#">Направления</a></li>
+              <li><a href="#">Ближайшие круизы</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a href="#"
+                  ><svg>
+                    <use
+                      xlink:href="img/sprite_auto.svg#social-item-1"
+                    ></use></svg
+                ></a>
+              </li>
+              <li>
+                <a href="#"></a
+                ><svg>
+                  <use xlink:href="img/sprite_auto.svg#social-item-2"></use>
+                </svg>
+              </li>
+              <li>
+                <a href="#"></a
+                ><svg>
+                  <use xlink:href="img/sprite_auto.svg#social-item-3"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </footer>
     <script src="js/menu.js"></script>
   </body>
 </html>
