добавил блок путшествий

--- a/source/index.html
+++ b/source/index.html
@@ -66,7 +66,26 @@
       </div>
     </header>
     <main class="page-main">
-      <div class="wrapper">CONTENT</div>
+      <section class="trips">
+        <div class="wrapper">
+          <div class="trips__content">
+            <h2>Путешествие на край Земли</h2>
+            <p>
+              Это волшебное путешествие поможет вам познакомиться поближе с
+              удивительным миром Антарктики. Наш круизный лайнер отвезет вас на
+              край Земли, где вы сможете увидеть: ледяные айсберги, несколько
+              видов пингвинов, китов, морских котиков и многое другое.
+            </p>
+          </div>
+          <div class="trips__image-container">
+            <img
+              src="img/trips/trips.jpg"
+              srcset="img/trips/trips@2x.jpg"
+              alt="Изображение с пингвинами"
+            />
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="page-footer">
       <div class="wrapper">
