--- a/source/index.html
+++ b/source/index.html
@@ -86,6 +86,45 @@
           </div>
         </div>
       </section>
+      <section class="avantage">
+        <div class="wrapper">
+          <h2>Преимущества</h2>
+          <ul>
+            <li>
+              <svg>
+                <use xlink:href="img/sprite_auto.svg#avantage-item-1"></use>
+              </svg>
+              <h3>Небольшой круизный лайнер</h3>
+              <p>
+                Круизный лайнер, рассчитанный всего лишь на 300 гостей, поможет
+                избежать шума и очередей и даст возможность насладиться видами и
+                природой.
+              </p>
+            </li>
+            <li>
+              <svg>
+                <use xlink:href="img/sprite_auto.svg#avantage-item-2"></use>
+              </svg>
+              <h3>Система все включено</h3>
+              <p>
+                Все наши круизы работают по системе “Все Включено”. Великолепные
+                блюда и безлимитный бар доступны для вас 24 часа.
+              </p>
+            </li>
+            <li>
+              <svg>
+                <use xlink:href="img/sprite_auto.svg#avantage-item-3"></use>
+              </svg>
+              <h3>Экскурсионные туры на Zodiac</h3>
+              <p>
+                Экскурсионные туры к берегам Антарктиды совершаются на
+                оборудованных лодках типа Zodiac в сопровождении опытных
+                экскурсоводов.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="page-footer">
       <div class="wrapper">
