--- a/source/index.html
+++ b/source/index.html
@@ -125,6 +125,267 @@
           </ul>
         </div>
       </section>
+      <section class="upcoming-cruises">
+        <div class="wrapper">
+          <h2>Ближайшие круизы</h2>
+          <ul class="upcoming-cruises__list">
+            <li class="upcoming-cruises__item">
+              <h3>Круиз “Астория”</h3>
+              <div class="upcoming-cruises__image-container">
+                <img
+                  src="img/upcoming-cruises/item-1.jpg"
+                  srcset="img/upcoming-cruises/item-1@2x.jpg"
+                  alt="Изображение Астории"
+                />
+              </div>
+              <div class="upcoming-cruises__content-container">
+                <ul class="upcoming-cruises__content-container-list">
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Маршрут</h4>
+                    <p>Аргентина - Фолклендские острова - Антарктида</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Порт отправления</h4>
+                    <p>Ушуайя</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Продолжительность</h4>
+                    <p>11 дней</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Цена</h4>
+                    <p>от 11500 $</p>
+                  </li>
+                </ul>
+                <a href="#">Забронировать</a>
+              </div>
+            </li>
+            <li class="upcoming-cruises__item">
+              <h3>Круиз “Элайн”</h3>
+              <div class="upcoming-cruises__image-container">
+                <img
+                  src="img/upcoming-cruises/item-1.jpg"
+                  srcset="img/upcoming-cruises/item-1@2x.jpg"
+                  alt="Изображение Элайн"
+                />
+              </div>
+              <div class="upcoming-cruises__content-container">
+                <ul class="upcoming-cruises__content-container-list">
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Маршрут</h4>
+                    <p>Аргентина - Фолклендские острова - Антарктида - Чили</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Порт отправления</h4>
+                    <p>Буэнос-Айрес</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Продолжительность</h4>
+                    <p>20 дней</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Цена</h4>
+                    <p>от 14500 $</p>
+                  </li>
+                </ul>
+                <a href="#">Забронировать</a>
+              </div>
+            </li>
+            <li class="upcoming-cruises__item">
+              <h3>Круиз "Атлантис"</h3>
+              <div class="upcoming-cruises__image-container">
+                <img
+                  src="img/upcoming-cruises/item-3.jpg"
+                  srcset="img/upcoming-cruises/item-3@2x.jpg"
+                  alt="Изображение Атлантис"
+                />
+              </div>
+              <div class="upcoming-cruises__content-container">
+                <ul class="upcoming-cruises__content-container-list">
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Маршрут</h4>
+                    <p>
+                      Аргентина - Южная Георгия и Южные Сандвичевы Острова -
+                      Антарктида
+                    </p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Порт отправления</h4>
+                    <p>Ушуайя</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Продолжительность</h4>
+                    <p>15 дней</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Цена</h4>
+                    <p>от 14500 $</p>
+                  </li>
+                </ul>
+                <a href="#">Забронировать</a>
+              </div>
+            </li>
+            <li class="upcoming-cruises__item">
+              <h3>Круиз "Антарктида"</h3>
+              <div class="upcoming-cruises__image-container">
+                <img
+                  src="img/upcoming-cruises/item-4.jpg"
+                  srcset="img/upcoming-cruises/item-4@2x.jpg"
+                  alt="Изображение Антарктиды"
+                />
+              </div>
+              <div class="upcoming-cruises__content-container">
+                <ul class="upcoming-cruises__content-container-list">
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Маршрут</h4>
+                    <p>Чили - Антарктида</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Порт отправления</h4>
+                    <p>Пунта-Аренас</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Продолжительность</h4>
+                    <p>13 дней</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Цена</h4>
+                    <p>от 9700 $</p>
+                  </li>
+                </ul>
+                <a href="#">Забронировать</a>
+              </div>
+            </li>
+            <li class="upcoming-cruises__item">
+              <h3>Круиз "Олимпия"</h3>
+              <div class="upcoming-cruises__image-container">
+                <img
+                  src="img/upcoming-cruises/item-5.jpg"
+                  srcset="img/upcoming-cruises/item-5@2x.jpg"
+                  alt="Изображение Олимпии"
+                />
+              </div>
+              <div class="upcoming-cruises__content-container">
+                <ul class="upcoming-cruises__content-container-list">
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Маршрут</h4>
+                    <p>
+                      Аргентина - Фолклендские острова - Южная Георгия -
+                      Антарктида
+                    </p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Порт отправления</h4>
+                    <p>Ушуайя</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Продолжительность</h4>
+                    <p>21 дней</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Цена</h4>
+                    <p>от 18600 $</p>
+                  </li>
+                </ul>
+                <a href="#">Забронировать</a>
+              </div>
+            </li>
+            <li class="upcoming-cruises__item">
+              <h3>Круиз "Аврора"</h3>
+              <div class="upcoming-cruises__image-container">
+                <img
+                  src="img/upcoming-cruises/item-6.jpg"
+                  srcset="img/upcoming-cruises/item-6@2x.jpg"
+                  alt="Изображение Авроры"
+                />
+              </div>
+              <div class="upcoming-cruises__content-container">
+                <ul class="upcoming-cruises__content-container-list">
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Маршрут</h4>
+                    <p>Аргентина - Антарктида - Чили</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Порт отправления</h4>
+                    <p>Ушуайя</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Продолжительность</h4>
+                    <p>14 дней</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Цена</h4>
+                    <p>от 11700 $</p>
+                  </li>
+                </ul>
+                <a href="#">Забронировать</a>
+              </div>
+            </li>
+            <li class="upcoming-cruises__item">
+              <h3>Круиз "Леонор"</h3>
+              <div class="upcoming-cruises__image-container">
+                <img
+                  src="img/upcoming-cruises/item-7.jpg"
+                  srcset="img/upcoming-cruises/item-7@2x.jpg"
+                  alt="Изображение Леонора"
+                />
+              </div>
+              <div class="upcoming-cruises__content-container">
+                <ul class="upcoming-cruises__content-container-list">
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Маршрут</h4>
+                    <p>Чили - Южная Георгия - Антарктида - Аргентина</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Порт отправления</h4>
+                    <p>Пунта-Аренас</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Продолжительность</h4>
+                    <p>17 дней</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Цена</h4>
+                    <p>от 12500 $</p>
+                  </li>
+                </ul>
+                <a href="#">Забронировать</a>
+              </div>
+            </li>
+            <li class="upcoming-cruises__item">
+              <h3>Круиз "Минион - 1"</h3>
+              <div class="upcoming-cruises__image-container">
+                <img
+                  src="img/upcoming-cruises/item-7.jpg"
+                  srcset="img/upcoming-cruises/item-7@2x.jpg"
+                  alt="Изображение Минион-1"
+                />
+              </div>
+              <div class="upcoming-cruises__content-container">
+                <ul class="upcoming-cruises__content-container-list">
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Маршрут</h4>
+                    <p>Аргентина - Антарктида</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Порт отправления</h4>
+                    <p>Ушуайя</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Продолжительность</h4>
+                    <p>11 дней</p>
+                  </li>
+                  <li class="upcoming-cruises__content-container-item">
+                    <h4>Цена</h4>
+                    <p>от 12300 $</p>
+                  </li>
+                </ul>
+                <a href="#">Забронировать</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="page-footer">
       <div class="wrapper">
