добавил блок контактов

--- a/source/index.html
+++ b/source/index.html
@@ -417,6 +417,27 @@
           </div>
         </div>
       </section>
+      <section class="contacts">
+        <div class="wrapper">
+          <h2 class="visually-hidden">Контакты</h2>
+          <div class="contacts__map-wrapper">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002876!2d30.320858715805148!3d59.93871916905456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sro!4v1646918363084!5m2!1sru!2sro"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+          </div>
+          <div class="contacts__content">
+            <p>
+              У вас ещё остались вопросы или сомнения? Приезжайте к нам в офис и
+              мы вам все расскажем.
+            </p>
+            <address>г. Санкт Петербург, ул. Большая Конюшенная, 19/8</address>
+            <a href="tel:88002000000">8-800-200-00-00</a>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="page-footer">
       <div class="wrapper">
