добавил правки после код ревью

--- a/source/index.html
+++ b/source/index.html
@@ -1,38 +1,15 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.min.css" />
-    <link
-      rel="prefetch"
-      href="fonts/Montserrat-Regular.ttf"
-      type="font/ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="prefetch"
-      href="fonts/Montserrat-Medium.ttf"
-      type="font/ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="prefetch"
-      href="fonts/Montserrat-SemiBold.ttf"
-      type="font/ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="prefetch"
-      href="fonts/Montserrat-Bold.ttf"
-      type="font/ttf"
-      as="font"
-      crossorigin="anonymous"
-    />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Интернет магазин по продаже круизов в Антарктику">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="prefetch" href="fonts/Montserrat-Regular.ttf" type="font/ttf" as="font" crossorigin="anonymous">
+    <link rel="prefetch" href="fonts/Montserrat-Medium.ttf" type="font/ttf" as="font" crossorigin="anonymous">
+    <link rel="prefetch" href="fonts/Montserrat-SemiBold.ttf" type="font/ttf" as="font" crossorigin="anonymous">
+    <link rel="prefetch" href="fonts/Montserrat-Bold.ttf" type="font/ttf" as="font" crossorigin="anonymous">
     <title>Круизы в Антарктику</title>
   </head>
   <body class="page-body">
@@ -60,7 +37,7 @@
           </div>
         </nav>
         <div class="page-header__content">
-          <h1>Круизы в Антарктику</h1>
+          <h1>Круизы в&nbsp;Антарктику</h1>
           <p>Волшебный мир айсбергов и пингвинов</p>
         </div>
       </div>
@@ -71,20 +48,15 @@
           <div class="trips__content">
             <h2>Путешествие на край Земли</h2>
             <p>
-              Это волшебное путешествие поможет вам познакомиться поближе с
-              удивительным миром Антарктики. Наш круизный лайнер отвезет вас на
-              край Земли, где вы сможете увидеть: ледяные айсберги, несколько
-              видов пингвинов, китов, морских котиков и многое другое.
+              Это волшебное путешествие поможет вам познакомиться поближе
+              с&nbsp;удивительным миром Антарктики. Наш круизный лайнер отвезет
+              вас на&nbsp;край Земли, где вы сможете увидеть: ледяные айсберги,
+              несколько видов пингвинов, китов, морских&nbsp;котиков и многое
+              другое.
             </p>
           </div>
           <div class="trips__image-container">
-            <img
-              src="img/trips/trips.jpg"
-              srcset="img/trips/trips@2x.jpg"
-              width="560"
-              height="301"
-              alt="Изображение с пингвинами"
-            />
+            <img src="img/trips/trips.jpg" srcset="img/trips/trips@2x.jpg" width="560" height="301" alt="Изображение с пингвинами">
           </div>
         </div>
       </section>
@@ -99,18 +71,19 @@
               <h3>Небольшой круизный лайнер</h3>
               <p>
                 Круизный лайнер, рассчитанный всего лишь на 300 гостей, поможет
-                избежать шума и очередей и даст возможность насладиться видами и
-                природой.
+                избежать шума и&nbsp;очередей и&nbsp;даст возможность
+                насладиться видами и&nbsp;природой.
               </p>
             </li>
             <li>
               <svg>
                 <use xlink:href="img/sprite_auto.svg#avantage-item-2"></use>
               </svg>
-              <h3>Система все включено</h3>
+              <h3>Система все&nbsp;включено</h3>
               <p>
-                Все наши круизы работают по системе “Все Включено”. Великолепные
-                блюда и безлимитный бар доступны для вас 24 часа.
+                Все наши круизы работают по&nbsp;системе&nbsp;“Все Включено”.
+                Великолепные блюда и&nbsp;безлимитный бар доступны для&nbsp;вас
+                24&nbsp;часа.
               </p>
             </li>
             <li>
@@ -119,9 +92,9 @@
               </svg>
               <h3>Экскурсионные туры на Zodiac</h3>
               <p>
-                Экскурсионные туры к берегам Антарктиды совершаются на
-                оборудованных лодках типа Zodiac в сопровождении опытных
-                экскурсоводов.
+                Экскурсионные туры к&nbsp;берегам Антарктиды совершаются
+                на&nbsp;оборудованных лодках типа&nbsp;Zodiac
+                в&nbsp;сопровождении опытных экскурсоводов.
               </p>
             </li>
           </ul>
@@ -133,16 +106,8 @@
           <ul class="upcoming-cruises__list">
             <li class="upcoming-cruises__item">
               <h3>Круиз “Астория”</h3>
-              <div class="upcoming-cruises__image-container">
-                <img
-                  src="img/upcoming-cruises/item-1.jpg"
-                  srcset="img/upcoming-cruises/item-1@2x.jpg"
-                  width="309"
-                  height="386"
-                  alt="Изображение Астории"
-                />
-              </div>
               <div class="upcoming-cruises__content-container">
+                <img src="img/upcoming-cruises/item-1.jpg" srcset="img/upcoming-cruises/item-1@2x.jpg" alt="Изображение Элайн">
                 <ul class="upcoming-cruises__content-container-list">
                   <li class="upcoming-cruises__content-container-item">
                     <h4>Маршрут</h4>
@@ -166,14 +131,8 @@
             </li>
             <li class="upcoming-cruises__item">
               <h3>Круиз “Элайн”</h3>
-              <div class="upcoming-cruises__image-container">
-                <img
-                  src="img/upcoming-cruises/item-1.jpg"
-                  srcset="img/upcoming-cruises/item-1@2x.jpg"
-                  alt="Изображение Элайн"
-                />
-              </div>
               <div class="upcoming-cruises__content-container">
+                <img src="img/upcoming-cruises/item-1.jpg" srcset="img/upcoming-cruises/item-1@2x.jpg" alt="Изображение Элайн">
                 <ul class="upcoming-cruises__content-container-list">
                   <li class="upcoming-cruises__content-container-item">
                     <h4>Маршрут</h4>
@@ -197,16 +156,8 @@
             </li>
             <li class="upcoming-cruises__item">
               <h3>Круиз "Атлантис"</h3>
-              <div class="upcoming-cruises__image-container">
-                <img
-                  src="img/upcoming-cruises/item-3.jpg"
-                  srcset="img/upcoming-cruises/item-3@2x.jpg"
-                  width="309"
-                  height="386"
-                  alt="Изображение Атлантис"
-                />
-              </div>
               <div class="upcoming-cruises__content-container">
+                <img src="img/upcoming-cruises/item-3.jpg" srcset="img/upcoming-cruises/item-3@2x.jpg" width="309" height="386" alt="Изображение Атлантис">
                 <ul class="upcoming-cruises__content-container-list">
                   <li class="upcoming-cruises__content-container-item">
                     <h4>Маршрут</h4>
@@ -233,16 +184,8 @@
             </li>
             <li class="upcoming-cruises__item">
               <h3>Круиз "Антарктида"</h3>
-              <div class="upcoming-cruises__image-container">
-                <img
-                  src="img/upcoming-cruises/item-4.jpg"
-                  srcset="img/upcoming-cruises/item-4@2x.jpg"
-                  width="309"
-                  height="386"
-                  alt="Изображение Антарктиды"
-                />
-              </div>
               <div class="upcoming-cruises__content-container">
+                <img src="img/upcoming-cruises/item-4.jpg" srcset="img/upcoming-cruises/item-4@2x.jpg" width="309" height="386" alt="Изображение Антарктиды">
                 <ul class="upcoming-cruises__content-container-list">
                   <li class="upcoming-cruises__content-container-item">
                     <h4>Маршрут</h4>
@@ -266,16 +209,8 @@
             </li>
             <li class="upcoming-cruises__item">
               <h3>Круиз "Олимпия"</h3>
-              <div class="upcoming-cruises__image-container">
-                <img
-                  src="img/upcoming-cruises/item-5.jpg"
-                  srcset="img/upcoming-cruises/item-5@2x.jpg"
-                  width="309"
-                  height="386"
-                  alt="Изображение Олимпии"
-                />
-              </div>
               <div class="upcoming-cruises__content-container">
+                <img src="img/upcoming-cruises/item-5.jpg" srcset="img/upcoming-cruises/item-5@2x.jpg" width="309" height="386" alt="Изображение Олимпии">
                 <ul class="upcoming-cruises__content-container-list">
                   <li class="upcoming-cruises__content-container-item">
                     <h4>Маршрут</h4>
@@ -302,16 +237,8 @@
             </li>
             <li class="upcoming-cruises__item">
               <h3>Круиз "Аврора"</h3>
-              <div class="upcoming-cruises__image-container">
-                <img
-                  src="img/upcoming-cruises/item-6.jpg"
-                  srcset="img/upcoming-cruises/item-6@2x.jpg"
-                  width="309"
-                  height="386"
-                  alt="Изображение Авроры"
-                />
-              </div>
               <div class="upcoming-cruises__content-container">
+                <img src="img/upcoming-cruises/item-6.jpg" srcset="img/upcoming-cruises/item-6@2x.jpg" width="309" height="386" alt="Изображение Авроры">
                 <ul class="upcoming-cruises__content-container-list">
                   <li class="upcoming-cruises__content-container-item">
                     <h4>Маршрут</h4>
@@ -335,16 +262,8 @@
             </li>
             <li class="upcoming-cruises__item">
               <h3>Круиз "Леонор"</h3>
-              <div class="upcoming-cruises__image-container">
-                <img
-                  src="img/upcoming-cruises/item-7.jpg"
-                  srcset="img/upcoming-cruises/item-7@2x.jpg"
-                  width="309"
-                  height="386"
-                  alt="Изображение Леонора"
-                />
-              </div>
               <div class="upcoming-cruises__content-container">
+                <img src="img/upcoming-cruises/item-7.jpg" srcset="img/upcoming-cruises/item-7@2x.jpg" width="309" height="386" alt="Изображение Леонора">
                 <ul class="upcoming-cruises__content-container-list">
                   <li class="upcoming-cruises__content-container-item">
                     <h4>Маршрут</h4>
@@ -368,16 +287,8 @@
             </li>
             <li class="upcoming-cruises__item">
               <h3>Круиз "Минион - 1"</h3>
-              <div class="upcoming-cruises__image-container">
-                <img
-                  src="img/upcoming-cruises/item-7.jpg"
-                  srcset="img/upcoming-cruises/item-7@2x.jpg"
-                  width="309"
-                  height="386"
-                  alt="Изображение Минион-1"
-                />
-              </div>
               <div class="upcoming-cruises__content-container">
+                <img src="img/upcoming-cruises/item-7.jpg" srcset="img/upcoming-cruises/item-7@2x.jpg" width="309" height="386" alt="Изображение Минион-1">
                 <ul class="upcoming-cruises__content-container-list">
                   <li class="upcoming-cruises__content-container-item">
                     <h4>Маршрут</h4>
@@ -407,36 +318,26 @@
           <div class="reservation__content">
             <h2>Раннее бронирование</h2>
             <p>
-              Забронируйте тур за 3-6 месяцев до даты выезда и сэкономьте до 50%
+              Забронируйте тур за 3-6 месяцев до&nbsp;даты&nbsp;выезда
+              и&nbsp;сэкономьте&nbsp;до 50%
             </p>
           </div>
           <div class="reservation__form-wrapper">
             <form action="https://echo.htmlacademy.ru/" method="post">
-              <p>Оставьте заявку и мы свяжемся с вами в ближайшее время</p>
+              <p>
+                Оставьте заявку и&nbsp;мы&nbsp;свяжемся с вами в ближайшее время
+              </p>
               <label for="name">Введите имя</label>
-              <input
-                class="reservation__form-name"
-                type="text"
-                placeholder="Имя"
-                id="name"
-                required
-              />
+              <input class="reservation__form-name" type="text" placeholder="Имя" id="name" required="">
               <label for="tel">Введите телефон</label>
-              <input
-                type="tel"
-                id="tel"
-                placeholder="Телефон"
-                minlength="11"
-                maxlength="11"
-                required
-              />
+              <input type="tel" id="tel" placeholder="Телефон" required="">
               <label for="email">Введите email</label>
-              <input type="email" placeholder="Email" id="email" required />
-              <input type="checkbox" id="checkbox" checked required />
+              <input type="email" placeholder="Email" id="email" required="">
+              <input type="checkbox" id="checkbox" checked="" required="">
               <label for="checkbox">
                 Я согласен на обработку моих персональных данных
               </label>
-              <input type="submit" value="Оставить заявку" />
+              <input type="submit" value="Оставить заявку">
             </form>
           </div>
         </div>
@@ -445,19 +346,16 @@
         <div class="wrapper">
           <h2 class="visually-hidden">Контакты</h2>
           <div class="contacts__map-wrapper">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002876!2d30.320858715805148!3d59.93871916905456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sro!4v1646918363084!5m2!1sru!2sro"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-            ></iframe>
+            <iframe title="Мы на карте" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002876!2d30.320858715805148!3d59.93871916905456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sro!4v1646918363084!5m2!1sru!2sro" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
           </div>
           <div class="contacts__content">
             <p>
-              У вас ещё остались вопросы или сомнения? Приезжайте к нам в офис и
-              мы вам все расскажем.
+              У вас ещё остались вопросы или сомнения? Приезжайте к&nbsp;нам
+              в&nbsp;офис и мы вам все расскажем.
             </p>
-            <address>г. Санкт Петербург, ул. Большая Конюшенная, 19/8</address>
+            <address>
+              г. Санкт Петербург, ул.&nbsp;Большая&nbsp;Конюшенная, 19/8
+            </address>
             <a href="tel:88002000000">8-800-200-00-00</a>
           </div>
         </div>
@@ -482,26 +380,27 @@
             </ul>
           </div>
           <div class="footer-social">
-            <ul>
-              <li>
-                <a href="#"
-                  ><svg>
-                    <use
-                      xlink:href="img/sprite_auto.svg#social-item-3"
-                    ></use></svg
-                ></a>
+            <ul class="footer-social__list">
+              <li class="footer-social__item">
+                <a href="#">
+                  <svg>
+                    <use xlink:href="img/sprite_auto.svg#social-item-3"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a href="#"></a
-                ><svg>
-                  <use xlink:href="img/sprite_auto.svg#social-item-1"></use>
-                </svg>
+              <li class="footer-social__item">
+                <a href="#">
+                  <svg>
+                    <use xlink:href="img/sprite_auto.svg#social-item-1"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a href="#"></a
-                ><svg>
-                  <use xlink:href="img/sprite_auto.svg#social-item-2"></use>
-                </svg>
+              <li class="footer-social__item">
+                <a href="#">
+                  <svg>
+                    <use xlink:href="img/sprite_auto.svg#social-item-2"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
@@ -510,5 +409,6 @@
     </footer>
     <script src="js/menu.js"></script>
     <script src="js/validation.js"></script>
+    <script src="js/upcomin-cruises-cart.js"></script>
   </body>
 </html>
