--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,7 @@
   </head>
   <body class="page-body">
     <header class="page-header">
+      <div class="page-header__overlay"></div>
       <div class="wrapper">
         <nav class="main-nav main-nav--no-js">
           <a>
